# vsys-final

./: .gitignore  .gitmodules  README.md  build.sh  make-for-android.sh  my_build.sh  run.sh  test.cpp  values.txt
activation/: speex
activation/activation/: audio_converter.h  phoneme.cpp  voice_activation.cpp  voice_activation.h  vsys_neon.h  vt_word_manager.cpp  vt_word_manager.h
activation/activation-android/: Makefile  main.cpp  ndk-app.mk  ndk.mk  src
activation/data/: baomao_M_0020.16000.1.16bit.pcm  baomao_M_0020.16000.1.float.pcm  baomao_M_0020.16000.8.float.pcm
activation/test_activation/: main.cpp  run.sh
activation/test_audio_processing/: main.cpp  main2.cpp
activation/test_mel/: main.cpp
activation/util/: simple_wave.cpp  simple_wave.h
activation/vsys.xcodeproj/: project.pbxproj
activation2/: Makefile  ndk.mk  run.sh
activation2/src/: voice_activation.cpp  vt_word_manager.cpp  vt_word_manager.h
aec/: README.md
aec/aec/: main.cpp
aec/aec.xcodeproj/: project.pbxproj
data/: lujnan_G_0020.16000.4.16bit.pcm.7z
jni/: Android-blis.mk  Android-cblas.mk  Android-fftw3.mk  Android-r2ssp.mk  Android-r2vt4.mk  Android-ztvad.mk  Android.mk  Android_ndkr25c-blis.mk  Application.mk  Makefile
r2slv4/: README.md  ad-make.sh  arm-clean.sh  arm-make.sh  cf-make.sh  makefile  mat-make.sh  ndk.path.sh  path.sh
r2slv4/CalculateSc/: bin.mk
r2slv4/pcm2wav/: bin.mk
r2slv4/r2ad3/: so.mk
r2slv4/r2ad_offline/: bin.mk
r2slv4/r2vt4/: so.mk
r2slv4/testcf/: bin.mk
r2slv4/testvt4/: bin.mk
r2slv4/testvt_s/: bin.mk
r2ssp/: .gitignore  CMakeLists.txt  README.md  r2ssp.cpp  src_arm64.cmake
r2ssp/bf/: frame_delayer.h  r2_beamformer.cc  r2_beamformer.h  r2_soundtracker.cpp  r2_soundtracker.h
r2ssp/cmake/: FindWebRTC_Audio_Processing.cmake
r2ssp/fe/: AllocSpace.cpp  AllocSpace.h  PLP.cpp  PLP.h  Pitch.cpp  Pitch.h  dictionary.cpp  dnn.cpp  dnn.h  feintf.cpp  feintf.h  fftwrapper.cpp  fftwrapper.h  iniparser.cpp  iniwrapper.h  lockwrapper.h
r2ssp/jni/: Android.mk  Application.mk
r2ssp/jni/armeabi-v7a/include/: rasr.h  zsourcelocationapi.h
r2ssp/speexdsp/: speexdsp_config.h
r2ssp/speexdsp/include/speex/: speex_echo.h
r2ssp/speexdsp/libspeexdsp/: arch.h  fftwrap.c  filterbank.c  preprocess.c
r2ssp/webrtc/common_audio/: real_fourier.cc  real_fourier.h
r2ssp/webrtc/modules/audio_processing/beamformer/: array_util.h  beam_adapter.cc  beam_adapter.h  beam_filter.cc  beam_filter.h  beam_localizer.cc  beam_localizer.h  covariance_matrix_generator.cc  covariance_matrix_generator.h  nonlinear_beamformer.cc  nonlinear_beamformer.h
r2ssp/webrtc/modules/audio_processing/ns/: ns_core.c
test/: Makefile  Threads.cpp  VirtualMic.cpp  VirtualMicClient.cpp  VirtualMicServer.cpp  VirtualMic_readmic.cpp  Y-combinator.cpp  aaudio.cpp  addr.cpp  bus.cpp  call_once.cpp  copy  futex.cpp  saf775d.cpp  swp64.cpp  test.cpp  values.txt
test/bsp/: audio_tools.hpp  client.cpp  hello.c  main.cpp  (+2 more)
ztvad/: Android.mk  Application.mk  ByteBuffer.h  CMakeLists.txt  NNVadIntf.cpp  README.md  VAD.cpp  VAD.h  VoiceDetector.cpp  VoiceDetector.h  blis-for-android.sh  fftw3-for-android.sh  src_arm64.cmake  vad_jni.cpp  ztvad.cpp
(+801 files in other folders)
